--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,3 @@
-/* line 1, ../scss/app.scss */
-.box {
-  width: 200px;
-  height: 200px;
-  background-color: red; }
+.box{width:200px;height:200px;background-color:blue}
 
 /*# sourceMappingURL=app.css.map */
